# rust-chatbot

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md
app/: Cargo.toml
app/src/: api.rs  lib.rs  snapshot.rs  state.rs
app/src/components/: conversation_area.rs  input_area.rs  mod.rs
app/src/models/: conversation.rs  mod.rs
server/: Cargo.toml
server/src/: main.rs
style/: main.scss
