[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
serde = { version = "1.0.188", features = ["derive"] }
llm = { git = "https://github.com/rustformers/llm" , branch = "main", default-features = false, features = ["models"], optional = true}
rand = "0.8.5"
num_cpus = { version = "1.16.0", optional = true }

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true
false = "0.0.0"
zstd = { version = "0.12.4", default-features = false, optional = true }
bincode = { version = "1.3.3", default-features = false, optional = true}

[features]
default = []
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
  "leptos/ssr", 
  "leptos_meta/ssr", 
  "leptos_router/ssr", 
  "dep:leptos_axum", 
  "dep:llm", 
  "dep:axum", 
  "dep:zstd",
  "dep:bincode",
  "dep:num_cpus"]

